Kubernetes/manifests/2026-06-15-configmap-secret-mounted-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
  - name: app
    image: nginx:1.25
